<resources>
    <string name="app_name">ProjectOne</string>
    <string name="enter_item">Enter Item</string>
    <string name="add">Add</string>
    <string name="course_name">Course Name</string>
    <string name="professor_name">Professor Name</string>
    <string name="course_time">Course Time</string>
    <string name="add_course">Add Course</string>
    <string name="go_to_assignments">Go to Assignments</string>
    <string name="assignment_name">Assignment Name</string>
    <string name="due_date">Due Date</string>
    <string name="add_assignment">Add Assignment</string>
    <string name="go_to_courses">Go to Courses</string>
    <string name="go_to_todo">Go to Todo</string>
    <string name="task">Task</string>
    <string name="description">Description</string>
    <string name="add_task">Add Task</string>
    <string name="go_back">Go Back</string>
    <string name="btn_goto_main">Go to Main</string>

</resources>