<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/blueLight">

    <EditText
        android:id="@+id/edit_course_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_name"
        android:textColor="@color/white"
        android:background="@drawable/edit_text_background"/>

    <EditText
        android:id="@+id/edit_professor_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/professor_name"
        android:textColor="@color/white"
        android:background="@drawable/edit_text_background"/>

    <EditText
        android:id="@+id/edit_course_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_time"
        android:textColor="@color/white"
        android:background="@drawable/edit_text_background"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_course"
        android:textColor="@color/white"
        android:backgroundTint="@color/bluePrimary"/>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_goto_assignments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_assignments"
        android:textColor="@color/white"
        android:backgroundTint="@color/bluePrimary"/>

    <Button
        android:id="@+id/btn_goto_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_todo"
        android:textColor="@color/white"
        android:backgroundTint="@color/bluePrimary"/>
</LinearLayout>
